monitoring/demo/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-name: monitoring-ingress-jaba
spec:
  ingressClassName: nginx
  rules:
  - host: grafanav1.monitoring.devopstech.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
